fixed some layout issues

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,53 +29,54 @@
         </div>
 
     </nav>
+    <main>
 
-    <div class="main">
-        <id class="h2">
-            <h2>Portfolio</h2>
-        </id>
+        <div class="main">
+            <id class="title">
+                <h2>Portfolio</h2>
+            </id>
 
-        <div class="images">
+            <div class="images">
 
-            <div class="img1">
-                <img src="./assets/images/Hangman.jpg" alt="">
+                <div class="img1">
+                    <img src="./assets/images/Hangman.jpg" alt="">
 
-                <div class="h4">
-                    <h4>Hangman</h4>
+                    <div class="h4">
+                        <h4>Hangman</h4>
+                    </div>
                 </div>
-            </div>
 
-            <div class="img2">
-                <img src="./assets/images/RPG Game.jpg" alt="">
-                <div class="h4">
-                    <h4>RPG Game</h4>
+                <div class="img2">
+                    <img src="./assets/images/RPG Game.jpg" alt="">
+                    <div class="h4">
+                        <h4>RPG Game</h4>
+                    </div>
                 </div>
-            </div>
 
-            <div class="img3">
-                <img src="./assets/images/Trivin Game.jpg" alt="">
-                <div class="h4">
-                    <h4>Trivin Game</h4>
+                <div class="img3">
+                    <img src="./assets/images/Trivin Game.jpg" alt="">
+                    <div class="h4">
+                        <h4>Trivin Game</h4>
+                    </div>
                 </div>
-            </div>
 
-            <div class="img4">
-                <img src="./assets/images/Rutgers Info Widget.jpg" alt="">
-                <div class="h4">
-                    <h4>Rutgers Info Widget</h4>
+                <div class="img4">
+                    <img src="./assets/images/Rutgers Info Widget.jpg" alt="">
+                    <div class="h4">
+                        <h4>Rutgers Info Widget</h4>
+                    </div>
                 </div>
-            </div>
 
-            <div class="img5">
-                <img src="./assets/images/Rock Paper Scissors.jpg" alt="">
-                <div class="h4">
-                    <h4>Rock Paper Scissors</h4>
+                <div class="img5">
+                    <img src="./assets/images/Rock Paper Scissors.jpg" alt="">
+                    <div class="h4">
+                        <h4>Rock Paper Scissors</h4>
+                    </div>
                 </div>
-            </div>
 
+            </div>
         </div>
-    </div>
-
+    </main>
 
     <Footer>
         <div class="footer">
